# Home_Work_19_2

./: data.json  pyproject.toml
catalog/: admin.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_category_created_at_alter_category_description.py  0003_alter_product_options.py  0004_alter_category_options.py
catalog/templates/catalog/: home.html
catalog_app/: admin.py  urls.py  views.py
catalog_app/migrations/: 0001_initial.py  0002_category_created_at_alter_category_description.py  0003_alter_product_options.py  0004_alter_category_options.py
catalog_app/templates/catalog/: contacts.html  home.html  product.html
catalog_app/templatetags/: my_tags.py
config/: settings.py  urls.py
management/commands/: fill.py  fill_cat.py  fill_db.py  fill_prod.py
