[tool.poetry]
name = "home-work-19-2"
version = "0.1.0"
description = ""
authors = ["Alexey Grazhdankin <alex.alexxx56@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_19_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
pillow = "^10.0.0"
ipython = "^8.14.0"
django-bootstrap4 = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
